# rover

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/rover-core/chassis/: chassis.cpp  chassis.h  chassis_command.h
src/rover-core/drivetrain/: drivetrain.h  motor_interface.h  wheel_controller.h
src/rover-core/sensors/: imu_interface.h
src/rover-esp32/: CMakeLists.txt  main.cpp
src/rover-esp32/drivetrain/: motor_esp32.h
src/rover-mock/chassis/: mock_chassis.cpp  mock_chassis.h
src/rover-mock/drivetrain/: encoder_mock.h  motor_mock.cpp  motor_mock.h
src/rover/brain/: chassis_interface.h  drive_command.h  mock_chassis.cpp  mock_chassis.h
src/rover/chassis/: chassis.cpp  chassis.h  chassis_interface.h  mock_chassis.h
src/rover/drivetrain/: drivetrain.cpp  drivetrain.h  encoder_interface.h  encoder_mock.cpp  encoder_mock.h  motor_mock.h  wheel_controller.cpp
src/rover/sensors/: imu_mock.cpp  imu_mock.h
tests/: CMakeLists.txt
tests/brain/: brain_tests.cpp
tests/chassis/: chassis_tests.cpp  command_tests.cpp
tests/drivetrain/: drivetrain_tests.cpp  encoder_tests.cpp  motor_tests.cpp  wheel_controller_tests.cpp
tests/sensors/: sensor_tests.cpp
